{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 63,
  "lineage": "b24a1738-ad53-5324-c69a-3a933b84c753",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382828900:security-group/sg-0712634772aacbe41",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0712634772aacbe41",
            "ingress": [],
            "name": "terraform-20240220004132501000000001",
            "name_prefix": "terraform-",
            "owner_id": "992382828900",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "deal-sg"
            },
            "tags_all": {
              "Name": "deal-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d14465915e454e61"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382828900:internet-gateway/igw-07578a80b1d13f6f5",
            "id": "igw-07578a80b1d13f6f5",
            "owner_id": "992382828900",
            "tags": {
              "Name": "deal-igw"
            },
            "tags_all": {
              "Name": "deal-igw"
            },
            "vpc_id": "vpc-0d14465915e454e61"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382828900:route-table/rtb-0a3d456f3827154db",
            "id": "rtb-0a3d456f3827154db",
            "owner_id": "992382828900",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07578a80b1d13f6f5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "deal-rtb"
            },
            "tags_all": {
              "Name": "deal-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d14465915e454e61"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09974084741f29076",
            "route_table_id": "rtb-0a3d456f3827154db",
            "subnet_id": "subnet-0e7c53a749703856d"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.rtb",
            "module.vpc.aws_subnet.subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b4c5d98723ce1bc",
            "route_table_id": "rtb-0a3d456f3827154db",
            "subnet_id": "subnet-0c93ec31f26e75dfd"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.rtb",
            "module.vpc.aws_subnet.subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-041b037c7f13830d5",
            "route_table_id": "rtb-0a3d456f3827154db",
            "subnet_id": "subnet-06ee608d76edf2cd8"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.rtb",
            "module.vpc.aws_subnet.subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382828900:subnet/subnet-0e7c53a749703856d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e7c53a749703856d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382828900",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "deal-subnet-0"
            },
            "tags_all": {
              "Name": "deal-subnet-0"
            },
            "vpc_id": "vpc-0d14465915e454e61"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382828900:subnet/subnet-0c93ec31f26e75dfd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c93ec31f26e75dfd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382828900",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "deal-subnet-1"
            },
            "tags_all": {
              "Name": "deal-subnet-1"
            },
            "vpc_id": "vpc-0d14465915e454e61"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382828900:subnet/subnet-06ee608d76edf2cd8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06ee608d76edf2cd8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382828900",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "deal-subnet-2"
            },
            "tags_all": {
              "Name": "deal-subnet-2"
            },
            "vpc_id": "vpc-0d14465915e454e61"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382828900:vpc/vpc-0d14465915e454e61",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0673fd28c82c7bb8f",
            "default_route_table_id": "rtb-047492055e53f9c37",
            "default_security_group_id": "sg-011b2463dcb21c832",
            "dhcp_options_id": "dopt-05c8d6d61324c0ce9",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d14465915e454e61",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-047492055e53f9c37",
            "owner_id": "992382828900",
            "tags": {
              "Name": "deal-vpc"
            },
            "tags_all": {
              "Name": "deal-vpc"
            }
          }
        }
      ]
    }
  ]
}